# PkModeling

./: .travis.yml  CMakeLists.txt  CMakeLists_1stAttemptFail.txt  README  README.md  SuperBuild.cmake  appveyor.yml
CLI/: CMakeLists.txt  CMakeLists_local.txt  PkModeling.cxx  PkModeling.xml  PkModeling.xml.in  PkSolver.cxx  PkSolver.h  SignalIntensitiesToConcentrationValues.cxx  SignalIntensitiesToConcentrationValues.xml.in  itkCalculateQuantificationParametersFilter.h  itkCalculateQuantificationParametersFilter.hxx  itkConcentrationToQuantitativeImageFilter.h  itkConcentrationToQuantitativeImageFilter.hxx  itkConvertSignalIntensitiesToConcentrationValuesFilter.h  itkConvertSignalIntensitiesToConcentrationValuesFilter.hxx  itkPluginUtilities.h  itkS0CalculationFilter.h  itkS0CalculationFilter.hxx  itkS0ForTimeSeriesInQulume.h  itkSignalIntensityToConcentration.h  itkSignalIntensityToConcentrationImageFilter.h  itkSignalIntensityToConcentrationImageFilter.hxx  itkSignalIntensityToS0ImageFilter.h  itkSignalIntensityToS0ImageFilter.hxx
CLI/Testing/Cxx/: CMakeLists.txt  ComparisonFilterTests.cmake  PkModelingTest.cxx  RegressionTests.cmake  itkTestMain.h  itkTestingComparisonImageFilter.h  itkTestingComparisonImageFilter.hxx
CMake/: pkmodelingBlockSetCMakeOSXVariables.cmake  pkmodelingCPackOptions.cmake.in  pkmodelingConfig.cmake.in  pkmodelingConfigureVersionTarget.cmake  pkmodelingFunctionExtractGitTagNames.cmake  pkmodelingTest.cmake  pkmodelingVersion.cmake  pkmodelingVersionConfigure.h.in
CMakeExternals/: DCMTK.cmake  ITK.cmake  SlicerExecutionModel.cmake
Data/: CMakeLists.txt
Data/DukeData/: SyntheticDukeMask.nrrd
Data/RegressionTests/DROs/: DRO3min3secinf.nrrd  DRO5min3secinf.nrrd
Data/RegressionTests/DROs/Input/: DRO-AIF.nrrd  DRO-ROI.nrrd  DRO-T1Map.nrrd  DRO3min5secinf.nrrd  DRO5min1secinf.nrrd  DRO5min5secinf.nrrd  README.md
Data/RegressionTests/DROs/Reference/: DRO3min3secinf_AllOutputsExceptFpv-auc.nrrd  DRO3min3secinf_AllOutputsExceptFpv-bat.nrrd  DRO3min3secinf_AllOutputsExceptFpv-conc.nrrd  DRO3min3secinf_AllOutputsExceptFpv-diag.nrrd  DRO3min3secinf_AllOutputsExceptFpv-fit.nrrd  DRO3min3secinf_AllOutputsExceptFpv-ktrans.nrrd  DRO3min3secinf_AllOutputsExceptFpv-rsq.nrrd  DRO3min3secinf_AllOutputsExceptFpv-ve.nrrd  DRO3min5secinf_AllOutputsExceptFpv-auc.nrrd  DRO3min5secinf_AllOutputsExceptFpv-bat.nrrd  DRO3min5secinf_AllOutputsExceptFpv-conc.nrrd  DRO3min5secinf_AllOutputsExceptFpv-diag.nrrd  DRO3min5secinf_AllOutputsExceptFpv-fit.nrrd  DRO3min5secinf_AllOutputsExceptFpv-ktrans.nrrd  DRO3min5secinf_AllOutputsExceptFpv-rsq.nrrd  DRO3min5secinf_AllOutputsExceptFpv-ve.nrrd  DRO5min1secinf_AllOutputsExceptFpv-auc.nrrd  DRO5min1secinf_AllOutputsExceptFpv-bat.nrrd  DRO5min1secinf_AllOutputsExceptFpv-conc.nrrd  DRO5min1secinf_AllOutputsExceptFpv-diag.nrrd  DRO5min1secinf_AllOutputsExceptFpv-fit.nrrd  DRO5min1secinf_AllOutputsExceptFpv-ktrans.nrrd  DRO5min1secinf_AllOutputsExceptFpv-maxslope.nrrd  DRO5min1secinf_AllOutputsExceptFpv-rsq.nrrd  DRO5min1secinf_AllOutputsExceptFpv-ve.nrrd  DRO5min3secinf_AllOutputsExceptFpv-auc.nrrd  DRO5min3secinf_AllOutputsExceptFpv-conc.nrrd  DRO5min3secinf_AllOutputsExceptFpv-diag.nrrd  DRO5min3secinf_AllOutputsExceptFpv-fit.nrrd  DRO5min3secinf_AllOutputsExceptFpv-ktrans.nrrd  DRO5min3secinf_AllOutputsExceptFpv-maxslope.nrrd  DRO5min3secinf_AllOutputsExceptFpv-rsq.nrrd  DRO5min3secinf_AllOutputsExceptFpv-ve.nrrd  DRO5min5secinf_AllOutputsExceptFpv-auc.nrrd  DRO5min5secinf_AllOutputsExceptFpv-conc.nrrd  DRO5min5secinf_AllOutputsExceptFpv-diag.nrrd  DRO5min5secinf_AllOutputsExceptFpv-fit.nrrd  DRO5min5secinf_AllOutputsExceptFpv-ktrans.nrrd  DRO5min5secinf_AllOutputsExceptFpv-maxslope.nrrd  DRO5min5secinf_AllOutputsExceptFpv-rsq.nrrd  (+1 more)
Data/RegressionTests/QINBreast001/Input/: QINBreast001-phantom.nrrd  README.md
Data/RegressionTests/QINBreast001/Reference/: QINBreast001_AllOutputsExceptFpv-auc.nrrd  QINBreast001_AllOutputsExceptFpv-bat.nrrd  QINBreast001_AllOutputsExceptFpv-conc.nrrd  QINBreast001_AllOutputsExceptFpv-diag.nrrd  QINBreast001_AllOutputsExceptFpv-fit.nrrd  QINBreast001_AllOutputsExceptFpv-ktrans.nrrd  QINBreast001_AllOutputsExceptFpv-maxslope.nrrd  QINBreast001_AllOutputsExceptFpv-rsq.nrrd  QINBreast001_AllOutputsExceptFpv-ve.nrrd  QINBreast001_ConstantBat-auc.nrrd  QINBreast001_ConstantBat-bat.nrrd  QINBreast001_ConstantBat-conc.nrrd  QINBreast001_ConstantBat-diag.nrrd  QINBreast001_ConstantBat-fit.nrrd  QINBreast001_ConstantBat-ktrans.nrrd  QINBreast001_ConstantBat-maxslope.nrrd  QINBreast001_ConstantBat-rsq.nrrd  QINBreast001_ConstantBat-ve.nrrd
Data/RegressionTests/QINProstate001/Input/: QINProstate001-phantom-ROI.nrrd
Data/RegressionTests/QINProstate001/Reference/: QINProstate001-ktrans.nrrd  QINProstate001-maxslope.nrrd  QINProstate001_AllOutputsExceptFpv-auc.nrrd  QINProstate001_AllOutputsExceptFpv-diag.nrrd  QINProstate001_AllOutputsExceptFpv-fit.nrrd  QINProstate001_AllOutputsExceptFpv-rsq.nrrd  QINProstate001_AllOutputsExceptFpv-ve.nrrd  QINProstate001_AllOutputsInclFpv-auc.nrrd  QINProstate001_AllOutputsInclFpv-bat.nrrd  QINProstate001_AllOutputsInclFpv-conc.nrrd  QINProstate001_AllOutputsInclFpv-diag.nrrd  QINProstate001_AllOutputsInclFpv-fit.nrrd  QINProstate001_AllOutputsInclFpv-fpv.nrrd  QINProstate001_AllOutputsInclFpv-ktrans.nrrd  QINProstate001_AllOutputsInclFpv-rsq.nrrd  (+1 more)
Data/SampledPhantoms/: README
Data/SampledPhantoms/QINProstate001/: README  probing.nrrd
Data/SyntheticData/: AUCVolumeSyn.nrrd  README.txt  SyntheticMask.nrrd  SyntheticMultiVolumeAllNagTen.nrrd  SyntheticQulumeInput.nrrd  ktransVolumeSyn.nrrd  maxSlopeVolumeSyn.nrrd  veVolumeSyn.nrrd
Data/TestData/: README.txt  SyntheticMultiVolumeAllZero.nrrd  SyntheticQulumeAllTen.nrrd
Data/TestData/MiniVolumes/: README.txt  TestBasic01.nrrd  TestBasic02.nrrd  TestConc01.nrrd  TestConc02.nrrd
Data/TestData/MultiVolumes/: ConcentrationMultiVolume.nrrd  SyntheticMultiVolumeOutput.nrrd
PkSolver/: CMakeLists.txt  PkSolver.cxx  PkSolver.h
Testing/: CMakeLists.txt
Testing/Cxx/: CMakeLists.txt
Util/: makePhantom.py
(+7 files in other folders)
